--- a/student.ipynb
+++ b/student.ipynb
@@ -114,82 +114,19 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/0_/q7hlfhcn723fzh10jym7md6c0000gn/T/ipykernel_57441/3340416042.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df['math score'].fillna(df['math score'].mean(), inplace=True)\n",
-      "/var/folders/0_/q7hlfhcn723fzh10jym7md6c0000gn/T/ipykernel_57441/3340416042.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df['reading score'].fillna(df['reading score'].mean(), inplace=True)\n",
-      "/var/folders/0_/q7hlfhcn723fzh10jym7md6c0000gn/T/ipykernel_57441/3340416042.py:4: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df['writing score'].fillna(df['writing score'].mean(), inplace=True)\n",
-      "/var/folders/0_/q7hlfhcn723fzh10jym7md6c0000gn/T/ipykernel_57441/3340416042.py:7: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df['gender'].fillna(df['gender'].mode()[0], inplace=True)\n",
-      "/var/folders/0_/q7hlfhcn723fzh10jym7md6c0000gn/T/ipykernel_57441/3340416042.py:8: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df['race/ethnicity'].fillna(df['race/ethnicity'].mode()[0], inplace=True)\n",
-      "/var/folders/0_/q7hlfhcn723fzh10jym7md6c0000gn/T/ipykernel_57441/3340416042.py:9: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df['parental level of education'].fillna(df['parental level of education'].mode()[0], inplace=True)\n",
-      "/var/folders/0_/q7hlfhcn723fzh10jym7md6c0000gn/T/ipykernel_57441/3340416042.py:10: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df['lunch'].fillna(df['lunch'].mode()[0], inplace=True)\n",
-      "/var/folders/0_/q7hlfhcn723fzh10jym7md6c0000gn/T/ipykernel_57441/3340416042.py:11: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df['test preparation course'].fillna(df['test preparation course'].mode()[0], inplace=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Fill missing numeric values with the mean of the column\n",
-    "df['math score'].fillna(df['math score'].mean(), inplace=True)\n",
-    "df['reading score'].fillna(df['reading score'].mean(), inplace=True)\n",
-    "df['writing score'].fillna(df['writing score'].mean(), inplace=True)\n",
+    "df['math score'] = df['math score'].fillna(df['math score'].mean())\n",
+    "df['reading score'] = df['reading score'].fillna(df['reading score'].mean())\n",
+    "df['writing score'] = df['writing score'].fillna(df['writing score'].mean())\n",
     "\n",
     "# For categorical columns, fill missing values with the mode\n",
-    "df['gender'].fillna(df['gender'].mode()[0], inplace=True)\n",
-    "df['race/ethnicity'].fillna(df['race/ethnicity'].mode()[0], inplace=True)\n",
-    "df['parental level of education'].fillna(df['parental level of education'].mode()[0], inplace=True)\n",
-    "df['lunch'].fillna(df['lunch'].mode()[0], inplace=True)\n",
-    "df['test preparation course'].fillna(df['test preparation course'].mode()[0], inplace=True)\n"
+    "df['gender'] = df['gender'].fillna(df['gender'].mode()[0])\n",
+    "df['race/ethnicity'] = df['race/ethnicity'].fillna(df['race/ethnicity'].mode()[0])\n",
+    "df['parental level of education'] = df['parental level of education'].fillna(df['parental level of education'].mode()[0])\n",
+    "df['lunch'] = df['lunch'].fillna(df['lunch'].mode()[0])\n",
+    "df['test preparation course'] = df['test preparation course'].fillna(df['test preparation course'].mode()[0])\n"
    ]
   },
   {
@@ -201,48 +138,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/0_/q7hlfhcn723fzh10jym7md6c0000gn/T/ipykernel_57441/70097103.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df['math score'].fillna(df['math score'].mean(), inplace=True)\n",
-      "/var/folders/0_/q7hlfhcn723fzh10jym7md6c0000gn/T/ipykernel_57441/70097103.py:7: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df['reading score'].fillna(df['reading score'].mean(), inplace=True)\n",
-      "/var/folders/0_/q7hlfhcn723fzh10jym7md6c0000gn/T/ipykernel_57441/70097103.py:10: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df['writing score'].fillna(df['writing score'].mean(), inplace=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Replace any unexpected string values or outliers that do not make sense\n",
     "df['math score'] = pd.to_numeric(df['math score'], errors='coerce')\n",
-    "df['math score'].fillna(df['math score'].mean(), inplace=True)\n",
+    "df['math score'] = df['math score'].fillna(df['math score'].mean())\n",
     "\n",
     "# Similar replacements for reading and writing scores\n",
     "df['reading score'] = pd.to_numeric(df['reading score'], errors='coerce')\n",
-    "df['reading score'].fillna(df['reading score'].mean(), inplace=True)\n",
+    "df['reading score'] = df['reading score'].fillna(df['reading score'].mean())\n",
     "\n",
     "df['writing score'] = pd.to_numeric(df['writing score'], errors='coerce')\n",
-    "df['writing score'].fillna(df['writing score'].mean(), inplace=True)\n"
+    "df['writing score'] = df['writing score'].fillna(df['writing score'].mean())\n"
    ]
   },
   {
@@ -254,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +342,7 @@
        "['student_performance_model.pkl']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
